[package]
name = "arbitrage-trading"
version = "0.1.0"
authors = ["hermano"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openlimits = "0.1.12"
tokio = { version = "1", features = ["full"] }
reader = "0.1.4"
rust_decimal = "1.10.3"
futures = "0.3.13"
chrono = "0.4.19"
stopwatch = "0.0.7"